--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container border border-primary ">
         <div class="row border border-danger justify-content-center vh-100 align-items-center">
             <div class="col-3 text-center">
-                <a href="/dow/" type="button" class="btn btn-danger btn-lg">Click to Download Emoji</a>
+                <a href="/dow/emogi.jpg" type="button" class="btn btn-danger btn-lg">Click to Download Emoji</a>
 
             </div>
 
